# Yuui03e

./: .gitignore  PRD.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_ANALYSIS_REPORT.md  TODO.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anidb.rs  commands.rs  db.rs  hashing.rs  lib.rs  library_analysis.rs  main.rs  media.rs  metadata.rs  parser.rs  scanner.rs  tmdb.rs
src-tauri/src/commands/: mangadex.rs  misc.rs  mod.rs  playback.rs  settings.rs  sync.rs
src-tauri/src/db/: caches.rs  entries.rs  mangadex.rs  mod.rs  playback.rs  schema.rs  user_data.rs
src-tauri/src/metadata/: anilist_client.rs  mod.rs  scoring.rs
src/components/: AiringCard.tsx  AnimeCard.tsx  DiscoverCard.tsx  EntryDetailModal.tsx  QuickViewModal.tsx  ShaderBackground.tsx  Sidebar.tsx  TitleBar.tsx  TitleBarControls.tsx  VideoPlayerOverlay.tsx
src/components/airing/: AiringCardBoard.tsx  AiringCardGrid.tsx  AiringCardList.tsx  AiringCardShared.tsx  types.ts  useAiringActions.ts  useAiringCountdown.ts
src/components/player/: NextEpisodePrompt.tsx  PlayerControlsBar.tsx  PlayerTopBar.tsx  usePlayerSession.ts
src/features/calendar/: CalendarPage.tsx  CalendarToolbar.tsx  DailyView.tsx  WeeklyBoard.tsx  api.ts  types.ts  (+2 more)
src/lib/: anilistStatus.ts  api.ts  color.ts  format.ts  formatTime.ts  resolveEntryKey.ts  theme.ts  types.ts  yandereApi.ts
src/store/: library.ts  types.ts
src/styles/: globals.css
(+100 files in other folders)
