[package]
name = "yuui-app"
version = "0.1.0"
description = "Yuui — Next-Generation Anime Library Manager"
authors = ["Yuui"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yuui_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + HTTP for metadata resolvers
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# File scanning + parsing
walkdir = "2"
regex = "1"
once_cell = "1"

# Fuzzy matching for hybrid title matching
strsim = "0.11"

# SQLite persistence (sync-ready schema). Rust-native sqlx.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Hashing for ed2k
md4 = "0.10"


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
